@@ -2,6 +2,8 @@ class Sys {
   native static method is_D_WIN32 : int ();
 
   native static method getenv : string ($name : string);
+
+  native static method setenv : int ($name : string, $value : string, $overwrite : int);
 }
 
 =pod
