@@ -11,7 +11,8 @@
     * Add the followng methods to the Sys class.
     
       static method getenv : string ($name : string);
-    
+      static method setenv : int ($name : string, $value : string, $overwrite : int);
+      
   [Incompatible Changes]
     * Change the definition of the following method in the Sys::IO class.
       [Before]
